package org.example.composite;

public abstract class Component {

    public abstract void resize();

    public abstract void draw();

}
