package org.example.composite;

public abstract class Composite extends Component {
    public abstract void add(Component component);
}
